# django-altcha-middleware

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
dam/: apps.py  decorators.py  forms.py  middleware.py  urls.py  views.py
dam/static/altcha/: altcha.min.js  altcha.min.js.ABOUT
dam/static/dam/: dam.css
dam/templates/: dam_challenge.html  dam_form.html
tests/: settings.py  test_middleware.py  test_views.py  urls.py  views.py
