[build]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'dam'
version = '1.0.0'
description = 'A Django app allowing you to protect views with an ALTCHA proof-of-work challenge.'
readme = 'README.md'
authors = [{name='University of North Texas Libraries', email='mark.phillips@unt.edu'}]
dependencies = [
    'django >= 4.2, <= 5.2',
    'altcha ~= 0.2.0']
requires-python = '>=3.9, < 3.13'
license = {file = 'LICENSE.txt'}
keywords = [
    'django',
    'altcha',
    'bots',
    'proof-of-work',
    'middleware',
    'decorator'
]
classifiers = [
    'Natural Language :: English',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 4.2',
    'Framework :: Django :: 5.0',
    'Framework :: Django :: 5.1',
    'Framework :: Django :: 5.2',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
